# zookeeper

./: .gitignore  CMakeLists.txt  README.md
include/libhrd/: hrd.h  hrd_sizes.h
include/mica/: mica.h
include/optik/: optik_mod.h
include/zookeeper/: cache.h  inline_util.h  main.h  util.h
results/latency/: latency_stats_LIN_UNIF_CREW_s_120_a_99_v_32_m_3_c_5_w_5_r_200_C_1000.csv  latency_stats_ZOOK_1%- WRITES.csv
results/scattered-results/: ZK_s_80__v_32_m_3_l_4_f_4_r_1000-0.csv
src/: Makefile
src/libhrd/: hrd_conn.c  hrd_util.c
src/mica/: mica.c
src/zookeeper/: Makefile  cache.c  follower.c  leader.c  main.c  run-zookeeper.sh  stats.c  util.c  worker.c  zookeeper
